<resources>
    <string name="app_name">Wallet Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="spend_amount_hint">Enter amount</string>
    <string name="very_important">Very Important</string>
    <string name="average_importance">Average Importance</string>
    <string name="not_important">Not Important</string>
    <string name="transaction_datetime_hint">Enter date/time of transaction</string>
    <string name="change_button">Change</string>
    <string name="transaction_time_label">Transaction Time:</string>
    <string name="comment_hint">Enter comment</string>
    <string name="money_amount_view">%1$.2f EGP</string>
    <string name="goal_name_hint">Enter goal\'s name</string>
    <string name="goal_amount_hint">Enter goal\'s amount</string>
    <string name="goal_date_separator">To</string>
    <string name="goal_achieved">Achieved:\u0020</string>
    <string name="goal_target">Target:\u0020</string>
    <string name="goal_per_day">\u0020per day</string>
    <string name="summary_last_month">Spending summary - This month</string>
    <string name="summary_all_time">Spending summary - All time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="goal">Goal</string>
    <string name="register">register</string>
    <string name="error_login">Incorrect email or password</string>
    <string name="error_register_email_exists">Email already exists</string>
    <string name="error_register_email_invalid">Please enter a valid email address</string>
    <string name="error_register_password">Your password is too weak!</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="new_password_hint">New password (unchanged)</string>
    <string name="new_email_hint">New email address (unchanged)</string>
    <string name="edit_account">Edit Account</string>
    <string name="record_location">Record location</string>
</resources>
